# ml-from-scratch-cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/k_means/: main.cpp
apps/linear_regression/: main.cpp
apps/logistic_regression/: main.cpp
apps/naive_bayes/: main.cpp
benchmarks/: k_means_benchmark.py  linear_regression.py  linear_regression_benchmark.py  logistic_regression_benchmark.py  naive_bayes_benchmark.py
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
data/: california_housing.csv  test.csv  titanic_survived.csv
data/KMeansClustering/: iris.csv
data/Logistic Regression/: titanic.csv
include/: utils.hpp
include/ml/: k_means.hpp  linear_regression.hpp  logistic_regression.hpp  model.hpp  naive_bayes.hpp
server/: package-lock.json  package.json  render-build.sh  tsconfig.json
server/src/: index.ts
server/src/controllers/: app.controllers.ts
server/src/routes/: app.routes.ts
server/src/schema/: app.schema.ts
server/src/utils/: utils.ts
src/: .#utils.cpp  k_means.cpp  linear_regression.cpp  logistic_regression.cpp  naive_bayes.cpp  utils.cpp
